// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFontFaces() different formats 1`] = `
[
  {
    "fontDisplay": "swap",
    "fontFamily": "Roboto",
    "fontStyle": "normal",
    "fontWeight": 400,
    "src": "url('/fonts/roboto.woff') format('woff'), url('/fonts/roboto.ttf') format('truetype')",
  },
]
`;

exports[`getFontFaces() different style 1`] = `
[
  {
    "fontDisplay": "swap",
    "fontFamily": "Roboto",
    "fontStyle": "normal",
    "fontWeight": 400,
    "src": "url('/fonts/roboto.ttf') format('truetype')",
  },
  {
    "fontDisplay": "swap",
    "fontFamily": "Roboto",
    "fontStyle": "italic",
    "fontWeight": 400,
    "src": "url('/fonts/roboto-italic.ttf') format('truetype')",
  },
]
`;

exports[`getFontFaces() different weight 1`] = `
[
  {
    "fontDisplay": "swap",
    "fontFamily": "Roboto",
    "fontStyle": "normal",
    "fontWeight": 400,
    "src": "url('/fonts/roboto.ttf') format('truetype')",
  },
  {
    "fontDisplay": "swap",
    "fontFamily": "Roboto",
    "fontStyle": "normal",
    "fontWeight": 500,
    "src": "url('/fonts/roboto-bold.ttf') format('truetype')",
  },
]
`;

exports[`getFontFaces() variable font 1`] = `
[
  {
    "fontDisplay": "swap",
    "fontFamily": "Inter",
    "fontStretch": "25% 151%",
    "fontStyle": "normal",
    "fontWeight": "100 1000",
    "src": "url('/fonts/inter.ttf') format('truetype')",
  },
]
`;
